fix: ajustes para o dash das rotinas e tarefas